Fixing two of the links

--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
 
 			<ul id="lifelinks">
 				<li>
-					<a href="#">&#xf092;</a>
+					<a href="https://github.com/GriffinBrodman">&#xf092;</a>
 					<span class="text">Github</span>
 				</li>
 				<li>
@@ -246,7 +246,7 @@
 					<span class="text">Resume</span>
 				</li>
 				<li>
-					<a href="#">&#xf08c;</a>
+					<a href="http://www.linkedin.com/in/griffinbrodman">&#xf08c;</a>
 					<span class="text">LinkedIn</span>
 				</li>
 			</ul>
