Added some text

--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
 			</ul>
 
 			<p id="about_me">
-				Lorem ipsum dolor sit amet, consectetur adipiscing elit. In pretium nulla dictum vestibulum commodo. Nullam dictum, eros vel facilisis mattis, metus metus laoreet lectus, sit amet condimentum tortor nunc id eros. Donec accumsan arcu ullamcorper elementum volutpat.
+				My name is Griffin Brodman. I'm a computer programmer, with experience building simulations, mathmatical modeling, and software development methodologies. I also enjoy the occasional working on video games and web design. 
 			</p>
 
 			<div id="projectsarea">
