--- a/index.html
+++ b/index.html
@@ -258,11 +258,11 @@
 			<div id="projectsarea">
 				<a class="project" href="#">
 					<div class="imgcontain">
-						<img src="http://placehold.it/130x80" alt="placeholder image"\>
+						<img src="cloud.png" alt="placeholder image"\>
 					</div>
-					<h3>Project Title</h3>
+					<h3>Cloud</h3>
 					<p class="minidescription">
-						Three Word Description
+						Rapidly Developed Art Game
 					</p>
 				</a>
 				
