I want it to fit on one line

--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
 					</div>
 					<h3>Cloud</h3>
 					<p class="minidescription">
-						Rapidly Developed Art Game
+						Rapidly Developed Art
 					</p>
 				</a>
 				
