--- a/index.html
+++ b/index.html
@@ -268,11 +268,11 @@
 				
 				<a class="project" href="#">
 					<div class="imgcontain">
-						<img src="http://placehold.it/130x80" alt="placeholder image"\>
+						<img src="brawl.png" alt="placeholder image"\>
 					</div>
-					<h3>Project Title</h3>
+					<h3>Zombie Toddler Brawl</h3>
 					<p class="minidescription">
-						Three Word Description
+						Lumberjack Flailing Zombies
 					</p>
 				</a>
 				
