--- a/index.html
+++ b/index.html
@@ -270,9 +270,9 @@
 					<div class="imgcontain">
 						<img src="brawl.png" alt="placeholder image"\>
 					</div>
-					<h3>Zombie Toddler Brawl</h3>
+					<h3>ZTB</h3>
 					<p class="minidescription">
-						Lumberjack Flailing Zombies
+						Zombie Toddler Brawl
 					</p>
 				</a>
 				
