Changing photo height

--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
 				
 				<a class="project" href="#">
 					<div class="imgcontain">
-						<img src="brawl.png" alt="placeholder image"\>
+						<img src="brawl.png" height="80" alt="placeholder image"\>
 					</div>
 					<h3>ZTB</h3>
 					<p class="minidescription">
