--- a/index.html
+++ b/index.html
@@ -278,11 +278,11 @@
 				
 				<a class="project" href="#">
 					<div class="imgcontain">
-						<img src="http://placehold.it/130x80" alt="placeholder image"\>
+						<img src="helix.png" alt="placeholder image"\>
 					</div>
-					<h3>Project Title</h3>
+					<h3>Helix Confessional</h3>
 					<p class="minidescription">
-						Three Word Description
+						Confess your Sins
 					</p>
 				</a>
 				
