--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
 					<div class="imgcontain">
 						<img src="helix.png" alt="placeholder image"\>
 					</div>
-					<h3>Helix Confessional</h3>
+					<h3>Helix</h3>
 					<p class="minidescription">
 						Confess your Sins
 					</p>
