--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
 			</ul>
 
 			<p id="about_me">
-				My name is Griffin Brodman. I'm a computer programmer, with experience building simulations, mathmatical modeling, and software development methodologies. I also enjoy the occasional working on video games and web design. 
+				My name is Griffin Brodman. I'm a computer programmer, with experience building simulations, mathmatical modeling, and software development methodologies. I also enjoy working on video games and web design. 
 			</p>
 
 			<div id="projectsarea">
@@ -288,11 +288,11 @@
 				
 				<a class="project" href="#">
 					<div class="imgcontain">
-						<img src="http://placehold.it/130x80" alt="placeholder image"\>
+						<img src="boids.png" alt="placeholder image"\>
 					</div>
-					<h3>Project Title</h3>
+					<h3>Boids</h3>
 					<p class="minidescription">
-						Three Word Description
+						Bird Flocking Behavior
 					</p>
 				</a>
 			</div>
