--- a/index.html
+++ b/index.html
@@ -271,6 +271,16 @@
 
 				<a class="project" href="#">
 					<div class="imgcontain">
+						<img src="box.png" alt="placeholder image"\>
+					</div>
+					<h3>Beck & Chuck</h3>
+					<p class="minidescription">
+						Chuck the Ball
+					</p>
+				</a>
+
+				<a class="project" href="#">
+					<div class="imgcontain">
 						<img src="cloud.png" alt="placeholder image"\>
 					</div>
 					<h3>Cloud</h3>
@@ -305,7 +315,7 @@
 					</div>
 					<h3>Qb</h3>
 					<p class="minidescription">
-						Rotation PC Peripheral
+						PC Rotation Peripheral
 					</p>
 				</a>
 			</div>
