--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
 
 				<a class="project" href="#">
 					<div class="imgcontain">
-						<img src="http://placehold.it/130x80" alt="placeholder image"\>
+						<img src="beck.png" alt="placeholder image"\>
 					</div>
 					<h3>Beck & Chuck</h3>
 					<p class="minidescription">
