--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<style>
 
 		@font-face {
-		    font-family: 'Inikia';
+		    font-family: 'Inika';
 		    src: url('./fonts/Inika.eot'); 
 		    src: url('./fonts/Inika.eot?#iefix') format('embedded-opentype'),
 		         url('./fonts/Inika.svg#svgFontName') format('svg'),
