Maybe changing hover behavior

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 			margin-right:auto;
 		}
 		#lifelinks:hover {
-			height:69px;
+			/*height:69px; Maybe */
 		}
 
 
@@ -134,6 +134,7 @@
 
 		#lifelinks:hover li {
 			top:0px;
+			height: 69px;
 		}
 
 		#lifelinks a{
