Adding resume link

--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
 					<span class="text">Github</span>
 				</li>
 				<li>
-					<a href="#">&#xf0f6;</a>
+					<a href="resume.pdf">&#xf0f6;</a>
 					<span class="text">Resume</span>
 				</li>
 				<li>
