Helix Page solid

--- a/helix.html
+++ b/helix.html
@@ -139,7 +139,7 @@
 		}
 
 		#postmort {
-			margin-top: 100px;
+			
 		}
 
 		@media (max-width: 870px)
@@ -157,6 +157,10 @@
 				text-align: center;
 				margin-left: 0;
 				padding-left: 0;
+			}
+
+			#postmort {
+				margin-top: -100px;
 			}
 		}
 
@@ -178,10 +182,20 @@
 			</p>
 			</div>
 
-			<div id="postmort">
+			<div id="postmort"><br>
 			<p>
-				This project butts butts butts butts butts butts butts butts butts butts butts butts butts butts butts butts butts butts butts butts butts butts butts butts butts butts butts butts butts butts butts butts butts butts butts butts butts butts butts butts butts butts butts butts butts butts butts butts butts butts butts butts butts butts butts butts butts butts butts butts butts butts butts butts butts butts butts butts butts butts butts 
+				I'd been meaning to get into Web Apps for a while, and with the internet fad that was Twitch Plays Pokemon, I saw a perfect opportunity. Not only could the popularity maybe get me some exposure, I knew that knowing I had around 4-5 days to make a web app would push me to actually finish it. I played around with redhad's openshift platform to deploy the app, and learned MySQL. 
+			</p><br>
+			<p>
+				I got my friend Gabe to draw me two beautiful pictures, and my friend PJ helped by sending me photoshopped designs of what the site should look like, which I matched as closely as possible.
+			</p><br>
+			<p>
+				After a week, the app had over 2,500 unique visitors, which I considered to be a huge success for a small app I made for practice. 
+			</p><br>
+			<p>
+				A live version of the app can be found <a href="http://helixconfessional-griffmaster9000.rhcloud.com/">here</a>. As opposed to the version that I originally released, this version had the data base wiped, no longer takes input, and is filled with dummy data, just so all responses remain appropriate.
 			</p>
+			
 			</div>
 
 
