Adding helix to main page

--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
 
 			<div id="projectsarea">
 
-				<a class="project" href="#">
+				<a class="project" href="helix.html">
 					<div class="imgcontain">
 						<img src="helix.png" alt="placeholder image"\>
 					</div>
