--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
 			</ul>
 
 			<p id="about_me">
-				My name is Griffin Brodman. I'm a computer programmer, with experience building simulations, mathmatical modeling, and software development methodologies. I also enjoy working on video games and web design. 
+				 I'm a computer programmer, with experience building simulations, mathmatical modeling, and software development methodologies. I also enjoy working on video games and web design. 
 			</p>
 
 
