DEVELOPING ON LIVE DUN DUN DUN

--- a/helix.html
+++ b/helix.html
@@ -134,6 +134,25 @@
 		hr {
 			visibility: hidden;
 		}
+
+		#back {
+			float: left;
+
+			position: absolute;
+
+			font-size: 4em;
+			font-family: 'fontawesome';
+		}
+
+		#back a {
+			text-decoration: none;
+			color: rgb(68, 67, 73);
+		}
+
+
+		#back a:hover {
+			color: #45B29D;
+		}
 		/* Gradient transparent - color - transparent */
 		
 
@@ -176,7 +195,10 @@
 	<title>Helix Confessional</title>
 
 	<body>
+
 		<div id="content">
+
+			<div id="back"><a href="index.html">&#xf0a8; </a> </div>
 			<h1><span id="project_title">Helix</span> Confessional</h1>
 			
 			<p id="page_subtitle">HTML, CSS, PHP, MySQL</p>
