--- a/helix.html
+++ b/helix.html
@@ -62,7 +62,7 @@
 		#content{
 			display:inline-block;
 			vertical-align:middle;
-
+			min-width: 450px;
 			background-color:#fefefe;
 			border-radius:2px;
 			padding:48px;
@@ -136,12 +136,11 @@
 		}
 
 		#back {
-			float: left;
-
-			position: absolute;
-
 			font-size: 4em;
 			font-family: 'fontawesome';
+			margin-bottom: -20px;
+			text-align: center;
+
 		}
 
 		#back a {
@@ -198,7 +197,7 @@
 
 		<div id="content">
 
-			<div id="back"><a href="index.html">&#xf0a8; </a> </div>
+			
 			<h1><span id="project_title">Helix</span> Confessional</h1>
 			
 			<p id="page_subtitle">HTML, CSS, PHP, MySQL</p>
@@ -226,8 +225,8 @@
 			</p>
 			
 			</div>
-
-
+<br>
+		<div id="back"><a href="index.html">&#xf0a8; </a> </div>
 		</div>
 
 		<div id="footer">
