Adding cloud, boids page

--- a/boids.html
+++ b/boids.html
@@ -191,37 +191,28 @@
 
 	</style>
 	<link rel="icon" href="grifficon.png">
-	<title>Helix Confessional</title>
+	<title>Boids</title>
 
 	<body>
 
 		<div id="content">
 
 			
-			<h1><span id="project_title">Helix</span> Confessional</h1>
+			<h1><span id="project_title">Boids</span> Simulation</h1>
 			
-			<p id="page_subtitle">HTML, CSS, PHP, MySQL</p>
+			<p id="page_subtitle">Java, Netbeans, Processing</p>
 			<br>
-			<img id="project_image" src="helixapp.png" width = "250">
+			<img id="project_image" src="boids.png" width = "250">
 
 			<div id="project_text">
 			<p>
-				Confess your sins! Submit your confessions to the Helix Fossil, and see if you are forgiven. And when you're done, make sure to stop by to see what other people have been confessing.
+				Watch these "birds" fly around the screen. They'll find other birds, group up, and flock together. Use the GUI to add birds or obstacles, or to adjust several of the simulation parameters.
 			</p>
 			</div>
 <hr>
 			<div id="postmort">
 			<p>
-				I'd been meaning to get into Web Apps for a while, and with the internet fad that was Twitch Plays Pokemon, I saw a perfect opportunity. Not only could the popularity maybe get me some exposure, I knew that knowing I had around 4-5 days to make a web app would push me to actually finish it. I played around with redhad's openshift platform to deploy the app, and learned MySQL. 
-			</p><br>
-			<p>
-				I got my friend Gabe to draw me two beautiful pictures, and my friend PJ helped by sending me photoshopped designs of what the site should look like, which I matched as closely as possible.
-			</p><br>
-			<p>
-				After a week, the app had over 2,500 unique visitors, which I considered to be a huge success for a small app I made for practice. 
-			</p><br>
-			<p>
-				A live version of the app can be found <a href="http://helixconfessional-griffmaster9000.rhcloud.com/">here</a>. As opposed to the version that I originally released, this version had the data base wiped, no longer takes input, and is filled with dummy data, just so all responses remain appropriate.
+				A project done in high school, this was a simulation of Craig Reynold's 1986 <a href="http://www.red3d.com/cwr/boids/"> Boids experiment</a> . We gave a few actors on a stage a  few simple rules, such as "All boids tend to move toward the center of motion". All of these simple rules together created complex behaviors, flocking behavior in this case. This was an example of emergent property. My partner handled the integration and calculus, and I wrote the logical rules, designed the system, and implemented our GUI.
 			</p>
 			
 			</div>
