--- a/cloud.html
+++ b/cloud.html
@@ -178,7 +178,7 @@
 			}
 
 			hr {
-				margin-top: -100px;
+				margin-top: -80px;
 			visibility: visible;
   		  	border: 0;
     		height: 1px;
@@ -198,30 +198,24 @@
 		<div id="content">
 
 			
-			<h1><span id="project_title">Cloud</span></h1>
+			<h1><span id="project_title">Cl</span>oud</h1>
 			
-			<p id="page_subtitle">HTML, CSS, PHP, MySQL</p>
+			<p id="page_subtitle">Actionscript, Flixel</p>
 			<br>
-			<img id="project_image" src="helixapp.png" width = "250">
+			<img id="project_image" src="cloudapp.png" width = "250">
 
 			<div id="project_text">
 			<p>
-				Confess your sins! Submit your confessions to the Helix Fossil, and see if you are forgiven. And when you're done, make sure to stop by to see what other people have been confessing.
+				As a happy go lucky cloud, explore the world while raining on the beings below. Some will be extraordinarily greatful for the rain, while others may not be so cheery. However, be careful not to metaphorically, or physically, drown others in your generosity.
 			</p>
 			</div>
 <hr>
 			<div id="postmort">
 			<p>
-				I'd been meaning to get into Web Apps for a while, and with the internet fad that was Twitch Plays Pokemon, I saw a perfect opportunity. Not only could the popularity maybe get me some exposure, I knew that knowing I had around 4-5 days to make a web app would push me to actually finish it. I played around with redhad's openshift platform to deploy the app, and learned MySQL. 
+				I did this project with my friend Max as part of the <a href="http://0hgame.eu/">0hr Game Jam</a>. We made this game in the extra hour gained by daylight savings time. Max provided all the artwork as I coded the game. It was super interesting to code under the constraint of having only an hour, it changed a lot of the usual development process. Cloud ended up being an art game about the power of abundance and not having enough. 
 			</p><br>
 			<p>
-				I got my friend Gabe to draw me two beautiful pictures, and my friend PJ helped by sending me photoshopped designs of what the site should look like, which I matched as closely as possible.
-			</p><br>
-			<p>
-				After a week, the app had over 2,500 unique visitors, which I considered to be a huge success for a small app I made for practice. 
-			</p><br>
-			<p>
-				A live version of the app can be found <a href="http://helixconfessional-griffmaster9000.rhcloud.com/">here</a>. As opposed to the version that I originally released, this version had the data base wiped, no longer takes input, and is filled with dummy data, just so all responses remain appropriate.
+				The finished product can be found <a href="Cloud.swf">here</a>.
 			</p>
 			
 			</div>
