--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
 					</p>
 				</a>
 
-				<a class="project" href="#">
+				<a class="project" href="cloud.html">
 					<div class="imgcontain">
 						<img src="cloud.png" alt="placeholder image"\>
 					</div>
@@ -300,7 +300,7 @@
 					</p>
 				</a>
 								
-				<a class="project" href="#">
+				<a class="project" href="boids.html">
 					<div class="imgcontain">
 						<img src="boids.png" alt="placeholder image"\>
 					</div>
