Cube page coming, made a few minor changes

--- a/cloud.html
+++ b/cloud.html
@@ -212,7 +212,7 @@
 <hr>
 			<div id="postmort">
 			<p>
-				I did this project with my friend Max as part of the <a href="http://0hgame.eu/">0hr Game Jam</a>. We made this game in the extra hour gained by daylight savings time. Max provided all the artwork as I coded the game. It was super interesting to code under the constraint of having only an hour, it changed a lot of the usual development process. Cloud ended up being an art game about the power of abundance and not having enough. 
+				I did this project with my friend Max as part of the <a href="http://0hgame.eu/">0hr Game Jam</a>. We made this game in the extra hour gained by daylight savings time. Max provided all the artwork as I coded the game. It was super interesting to code under the constraint of having only an hour, it changed a lot of the usual development process. Cloud ended up being an art game about the power of abundance and not having "enough". 
 			</p><br>
 			<p>
 				The finished product can be found <a href="Cloud.swf">here</a>.
