--- a/helix.html
+++ b/helix.html
@@ -212,16 +212,16 @@
 <hr>
 			<div id="postmort">
 			<p>
-				I'd been meaning to get into Web Apps for a while, and with the internet fad that was Twitch Plays Pokemon, I saw a perfect opportunity. Not only could the popularity maybe get me some exposure, I knew that knowing I had around 4-5 days to make a web app would push me to actually finish it. I played around with redhad's openshift platform to deploy the app, and learned MySQL. 
+				I'd been meaning to explore Web Apps for a while, and with the internet fad that was Twitch Plays Pokemon, I saw a perfect opportunity. Not only could the popularity maybe get me some exposure, I set myself a goal of a 4-5 day turnaround to publish the app, to make sure it stayed relevant and to push me to actually finish it. I used redhat's openshift platform to deploy the app, and learned MySQL in the process. 
 			</p><br>
 			<p>
-				I got my friend Gabe to draw me two beautiful pictures, and my friend PJ helped by sending me photoshopped designs of what the site should look like, which I matched as closely as possible.
+				My friend Gabe agreed to draw the illustrations and my friend PJ helped by sending me his photo-shopped designs of the site, which I matched as closely as possible.
 			</p><br>
 			<p>
-				After a week, the app had over 2,500 unique visitors, which I considered to be a huge success for a small app I made for practice. 
+				After a week, the app had over 2,500 unique visitors, which I considered to be a huge success for a small “practice” app. 
 			</p><br>
 			<p>
-				A live version of the app can be found <a href="http://helixconfessional-griffmaster9000.rhcloud.com/">here</a>. As opposed to the version that I originally released, this version had the data base wiped, no longer takes input, and is filled with dummy data, just so all responses remain appropriate.
+				A live version of the app can be found <a href="http://helixconfessional-griffmaster9000.rhcloud.com/">here</a>. This version no longer takes input, and is filled with dummy data so that all responses remain appropriate.
 			</p>
 			
 			</div>
