--- a/Qb.html
+++ b/Qb.html
@@ -191,34 +191,34 @@
 
 	</style>
 	<link rel="icon" href="grifficon.png">
-	<title>Helix Confessional</title>
+	<title>Qb</title>
 
 	<body>
 
 		<div id="content">
 
 			
-			<h1><span id="project_title">Helix</span> Confessional</h1>
+			<h1><span id="project_title">Q</span>b</h1>
 			
-			<p id="page_subtitle">HTML, CSS, PHP, MySQL</p>
+			<p id="page_subtitle">Arduino, C++, Python </p>
 			<br>
-			<img id="project_image" src="helixapp.png" width = "250">
+			<img id="project_image" src="box.png" width = "250">
 
 			<div id="project_text">
 			<p>
-				Confess your sins! Submit your confessions to the Helix Fossil, and see if you are forgiven. And when you're done, make sure to stop by to see what other people have been confessing.
+				Ever wish that all computers came with a rotation based peripheral? Of course you did! Rotate the cube to see it rotate on the screen.
 			</p>
 			</div>
 <hr>
 			<div id="postmort">
 			<p>
-				I'd been meaning to get into Web Apps for a while, and with the internet fad that was Twitch Plays Pokemon, I saw a perfect opportunity. Not only could the popularity maybe get me some exposure, I knew that knowing I had around 4-5 days to make a web app would push me to actually finish it. I played around with redhad's openshift platform to deploy the app, and learned MySQL. 
+				A senior project I did in high school, our group used a 3-DOF accelerometer / gyroscope / magnetometer to make a rotation based computer peripheral. It was more of a proof of concept, and one of our intial goals was to eventually write an API around it so that others could develop applications for it.
 			</p><br>
 			<p>
-				I got my friend Gabe to draw me two beautiful pictures, and my friend PJ helped by sending me photoshopped designs of what the site should look like, which I matched as closely as possible.
+				 Initially, we were hoping to make it location based as well, but after further research into the topic, dead reckoning had nowhere near the degree of accuracy we'd need for our desired range of motion. While the sensors we had would have been appropriate for tracking the location of a model plane maybe, it couldn't quite be accurate enough for the 2'x2' area we designed it to be used in.
 			</p><br>
 			<p>
-				After a week, the app had over 2,500 unique visitors, which I considered to be a huge success for a small app I made for practice. 
+				My role on the project became physics and graphics based. I was sent the data from the sensor, given to the computer through USB, and using that, I performed the calculations to move the "cube object" around the screen, and to update our drawing of it. After doing research into the topic of dead reckoning, I decided that we should use quaternions as our representation 
 			</p><br>
 			<p>
 				A live version of the app can be found <a href="http://helixconfessional-griffmaster9000.rhcloud.com/">here</a>. As opposed to the version that I originally released, this version had the data base wiped, no longer takes input, and is filled with dummy data, just so all responses remain appropriate.
