--- a/Qb.html
+++ b/Qb.html
@@ -200,7 +200,7 @@
 			
 			<h1><span id="project_title">Q</span>b</h1>
 			
-			<p id="page_subtitle">Arduino, C++, Python </p>
+			<p id="page_subtitle">Arduino, Python </p>
 			<br>
 			<img id="project_image" src="box.png" width = "250">
 
@@ -218,10 +218,10 @@
 				 Initially, we were hoping to make it location based as well, but after further research into the topic, dead reckoning had nowhere near the degree of accuracy we'd need for our desired range of motion. While the sensors we had would have been appropriate for tracking the location of a model plane maybe, it couldn't quite be accurate enough for the 2'x2' area we designed it to be used in.
 			</p><br>
 			<p>
-				My role on the project became physics and graphics based. I was sent the data from the sensor, given to the computer through USB, and using that, I performed the calculations to move the "cube object" around the screen, and to update our drawing of it. After doing research into the topic of dead reckoning, I decided that we should use quaternions as our representation 
+				My role on the project became physics and graphics based. I was sent the data from the sensor, given to the computer through USB, and using that, I performed the calculations to move the "cube object" around the screen, and to update our drawing of it. After doing research into the topic of dead reckoning, I decided that we should use quaternions as our representation for rotation. Our end model was done in python, using Vpython for drawing.
 			</p><br>
 			<p>
-				A live version of the app can be found <a href="http://helixconfessional-griffmaster9000.rhcloud.com/">here</a>. As opposed to the version that I originally released, this version had the data base wiped, no longer takes input, and is filled with dummy data, just so all responses remain appropriate.
+				The project went well, and in the end, we did have a cube that responded properly to rotation.
 			</p>
 			
 			</div>
