--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
 					</p>
 				</a>
 
-				<a class="project" href="#">
+				<a class="project" href="qb.html">
 					<div class="imgcontain">
 						<img src="box.png" alt="placeholder image"\>
 					</div>
