Added zombie page

--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
 					</p>
 				</a>
 				
-				<a class="project" href="#">
+				<a class="project" href="ztb">
 					<div class="imgcontain">
 						<img src="brawl.png" height="80" alt="placeholder image"\>
 					</div>
