--- a/ztb.html
+++ b/ztb.html
@@ -191,38 +191,33 @@
 
 	</style>
 	<link rel="icon" href="grifficon.png">
-	<title>Helix Confessional</title>
+	<title>Zombie Toddler Brawl</title>
 
 	<body>
 
 		<div id="content">
 
 			
-			<h1><span id="project_title">Helix</span> Confessional</h1>
+			<h1><span id="project_title">Zombie</span> Toddler Brawl</h1>
 			
-			<p id="page_subtitle">HTML, CSS, PHP, MySQL</p>
+			<p id="page_subtitle">Actionscript, Flixel</p>
 			<br>
-			<img id="project_image" src="helixapp.png" width = "250">
+			<img id="project_image" src="brawl.png" width = "250">
 
 			<div id="project_text">
 			<p>
-				Confess your sins! Submit your confessions to the Helix Fossil, and see if you are forgiven. And when you're done, make sure to stop by to see what other people have been confessing.
+			The Zombie Apocalypse has occured, and nowhere is safe. Fend off legions of small child zombies, armed only with your trusty flail.
 			</p>
 			</div>
 <hr>
 			<div id="postmort">
 			<p>
-				I'd been meaning to get into Web Apps for a while, and with the internet fad that was Twitch Plays Pokemon, I saw a perfect opportunity. Not only could the popularity maybe get me some exposure, I knew that knowing I had around 4-5 days to make a web app would push me to actually finish it. I played around with redhad's openshift platform to deploy the app, and learned MySQL. 
+				My first attempt at a flash game, I was aiming for an arcade based infinite survival game. The unique mechanic of the game was the combat system, a flail was kept at a fixed distance from the player. As it collides and recoils upon hitting zombies, the optimal way to play is to keep switching rotation directions, leading to a very fluid and responsive control system.
 			</p><br>
 			<p>
-				I got my friend Gabe to draw me two beautiful pictures, and my friend PJ helped by sending me photoshopped designs of what the site should look like, which I matched as closely as possible.
-			</p><br>
-			<p>
-				After a week, the app had over 2,500 unique visitors, which I considered to be a huge success for a small app I made for practice. 
-			</p><br>
-			<p>
-				A live version of the app can be found <a href="http://helixconfessional-griffmaster9000.rhcloud.com/">here</a>. As opposed to the version that I originally released, this version had the data base wiped, no longer takes input, and is filled with dummy data, just so all responses remain appropriate.
+				I never got around to finishing the product, but it served as good practice for me. I learned some of the do's and don'ts of architecting a system, and how games / simulations function.
 			</p>
+			
 			
 			</div>
 <br>
