Found my game woo

--- a/ztb.html
+++ b/ztb.html
@@ -216,8 +216,10 @@
 			</p><br>
 			<p>
 				I never got around to finishing the product, but it served as good practice for me. I learned some of the do's and don'ts of architecting a system, and how games / simulations function.
+			</p><br>
+			<p>
+				The game as it currently stands in its unfinished state can be found <a href="ToddlerBrawl.swf">here</a>.
 			</p>
-			
 			
 			</div>
 <br>
