Added beck page

--- a/beck.html
+++ b/beck.html
@@ -191,37 +191,31 @@
 
 	</style>
 	<link rel="icon" href="grifficon.png">
-	<title>Helix Confessional</title>
+	<title>Beck & Chuck</title>
 
 	<body>
 
 		<div id="content">
 
 			
-			<h1><span id="project_title">Helix</span> Confessional</h1>
+			<h1><span id="project_title">Beck</span> & Chuck</h1>
 			
-			<p id="page_subtitle">HTML, CSS, PHP, MySQL</p>
+			<p id="page_subtitle">Farseer, XNA</p>
 			<br>
-			<img id="project_image" src="helixapp.png" width = "250">
+			<img id="project_image" src="beck.jpg" width = "250">
 
 			<div id="project_text">
 			<p>
-				Confess your sins! Submit your confessions to the Helix Fossil, and see if you are forgiven. And when you're done, make sure to stop by to see what other people have been confessing.
+				Chuck the Ball! Play a Beck, a young acrobatic rebel, as she fights her way through a factory, killing robots by throwing Chuck at them.
 			</p>
 			</div>
 <hr>
 			<div id="postmort">
 			<p>
-				I'd been meaning to get into Web Apps for a while, and with the internet fad that was Twitch Plays Pokemon, I saw a perfect opportunity. Not only could the popularity maybe get me some exposure, I knew that knowing I had around 4-5 days to make a web app would push me to actually finish it. I played around with redhad's openshift platform to deploy the app, and learned MySQL. 
+				I am currently taking a Game Design class in college, and this is my group's semester long project.
 			</p><br>
 			<p>
-				I got my friend Gabe to draw me two beautiful pictures, and my friend PJ helped by sending me photoshopped designs of what the site should look like, which I matched as closely as possible.
-			</p><br>
-			<p>
-				After a week, the app had over 2,500 unique visitors, which I considered to be a huge success for a small app I made for practice. 
-			</p><br>
-			<p>
-				A live version of the app can be found <a href="http://helixconfessional-griffmaster9000.rhcloud.com/">here</a>. As opposed to the version that I originally released, this version had the data base wiped, no longer takes input, and is filled with dummy data, just so all responses remain appropriate.
+				Right now the project is very much a work in progress, updates will soon follow.
 			</p>
 			
 			</div>
