Fixed spelling error and turned on beck page

--- a/beck.html
+++ b/beck.html
@@ -206,7 +206,7 @@
 
 			<div id="project_text">
 			<p>
-				Chuck the Ball! Play a Beck, a young acrobatic rebel, as she fights her way through a factory, killing robots by throwing Chuck at them.
+				Chuck the Ball! Play as Beck, a young acrobatic rebel, as she fights her way through a factory, killing robots by throwing Chuck at them.
 			</p>
 			</div>
 <hr>
