--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
 					</p>
 				</a>
 
-				<a class="project" href="#">
+				<a class="project" href="beck.html">
 					<div class="imgcontain">
 						<img src="beck.png" alt="placeholder image"\>
 					</div>
