--- a/index.html
+++ b/index.html
@@ -260,6 +260,24 @@
 
 			<div id="projectsarea">
 
+				<a class="project" href="stories.html">
+					<div class="imgcontain">
+						<img src="stories.png" alt="placeholder image"\>
+					</div>
+					<h3>Stories</h3>
+					<p class="minidescription">
+						Share your news
+					</p>
+				</a>
+				<a class="project" href="mote.html">
+					<div class="imgcontain">
+						<img src="mote.png" alt="placeholder image"\>
+					</div>
+					<h3>Mote</h3>
+					<p class="minidescription">
+						Open Source Remote
+					</p>
+				</a>
 				<a class="project" href="helix.html">
 					<div class="imgcontain">
 						<img src="helix.png" alt="placeholder image"\>
@@ -268,7 +286,7 @@
 					<p class="minidescription">
 						Confess your Sins
 					</p>
-				</a>
+				</a>								
 
 				<a class="project" href="beck.html">
 					<div class="imgcontain">
@@ -290,7 +308,7 @@
 					</p>
 				</a>
 				
-				<a class="project" href="ztb">
+				<a class="project" href="ztb.html">
 					<div class="imgcontain">
 						<img src="brawl.png" height="80" alt="placeholder image"\>
 					</div>
