--- a/mote.html
+++ b/mote.html
@@ -197,39 +197,34 @@
 
 	</style>
 	<link rel="icon" href="grifficon.png">
-	<title>Helix Confessional</title>
+	<title>Mote</title>
 
 	<body>
 
 		<div id="content">
 
 			
-			<h1><span id="project_title">Helix</span> Confessional</h1>
+			<h1><span id="project_title">Mote</span>.io</h1>
 			
-			<p id="page_subtitle">HTML, CSS, PHP, MySQL</p>
+			<p id="page_subtitle">JQuery</p>
 			<br>
-			<img id="project_image" src="helixapp.png" width = "250">
+			<img id="project_image" src="mote.png" width = "290">
 
 			<div id="project_text">
 			<p>
-				Confess your sins! Submit your confessions to the Helix Fossil, and see if you are forgiven. And when you're done, make sure to stop by to see what other people have been confessing.
+				Use your phone as a remote, now for imgur! Ever wanted to browse imgur with your friends, or by yourself, but get tired of continiously pressing the right key? Now you can just use your phone as a remote, and browse with comfort.
 			</p>
 			</div>
 <hr>
 			<div id="postmort">
 			<p>
-				I'd been meaning to explore Web Apps for a while, and with the internet fad that was Twitch Plays Pokemon, I saw a perfect opportunity. Not only could the popularity maybe get me some exposure, I set myself a goal of a 4-5 day turnaround to publish the app, to make sure it stayed relevant and to push me to actually finish it. I used redhat's openshift platform to deploy the app, and learned MySQL in the process. 
+				My first adventure into Open Source, at HackNY I listened to an API talk by <a href="https://github.com/ianjennings"> Ian Jennings</a> about his app <a href="Mote.io">Mote.io</a>. He said that at least four of the different remotes for the app were made from Open Source development, some even at hackathons.
 			</p><br>
-			<p>
-				My friend Gabe agreed to draw the illustrations and my friend PJ helped by sending me his photo-shopped designs of the site, which I matched as closely as possible.
+			<p> Our actual hack for the hackathon ended up not taking too much time, and I decided to spend some time working on a side project. I looked into how making a new remote worked, and I decided this would be a fun project to do, teaching me JQuery in the process. I first started working on a stumbleupon remote, but then realized that stumbleupon doesn't really lend itself to being navigated by simple clicks.
 			</p><br>
-			<p>
-				After a week, the app had over 2,500 unique visitors, which I considered to be a huge success for a small “practice” app. 
+			<p> I decided to make a remote for imgur. I spent a few hours delving into imgur, figuring out how it worked, and learning Ian's Mote API. After some experimentation, exploration, and user testing, I made a remote that I felt could handle every capability of imgur. I polished up my code, and submitted a pull request to the main repo.
 			</p><br>
-			<p>
-				A live version of the app can be found <a href="http://helixconfessional-griffmaster9000.rhcloud.com/">here</a>. This version no longer takes input, and is filled with dummy data so that all responses remain appropriate.
-			</p>
-			
+			<p> My fork repo can be found <a href="https://github.com/GriffinBrodman/mote.io-extension"> here</a>.
 			</div>
 <br>
 		<div id="back"><a href="index.html">&#xf0a8; </a> </div>
