--- a/qb.html
+++ b/qb.html
@@ -153,7 +153,13 @@
 			color: #45B29D;
 		}
 		/* Gradient transparent - color - transparent */
-		
+		#postmort p a {
+			color: #777777;
+		}
+
+		#postmort p a:hover {
+			color:#45B29D;
+		}		
 
 
 		@media (max-width: 870px)
