--- a/ztb.html
+++ b/ztb.html
@@ -154,7 +154,13 @@
 		}
 		/* Gradient transparent - color - transparent */
 		
+		#postmort p a {
+			color: #777777;
+		}
 
+		#postmort p a:hover {
+			color:#45B29D;
+		}
 
 		@media (max-width: 870px)
 		{
